<resources>
    <string name="app_name">AdminApp</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="not_registered">Not Registered?</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_registered">Already Registered?</string>
    <string name="welcome_user">Welcome</string>
    <string name="logout">Logout</string>

    <string name="backToMain">Back</string>
    <string name="eventTitle">Title</string>
    <string name="eventDesc">Description</string>
    <string name="eventAttendee">Attendee</string>
    <string name="eventStart">Start Time</string>
    <string name="eventEnd">End Time</string>
    <string name="eventLocation">Location</string>

    <string name="createEventTitle">Title</string>
    <string name="createEventDesc">Description</string>
    <string name="createEventAttendee">Attendee</string>
    <string name="createEventStart">Start At</string>
    <string name="createEventStartDate">Pick Date</string>
    <string name="createEventStartTime">Pick Time</string>

    <string name="createEventEnd">End At</string>
    <string name="createEventEndDate">Pick Date</string>
    <string name="createEventEndTime">Pick Time</string>


    <string name="createEventLocation">Location</string>
    <string name="calendar">Calendar</string>
</resources>
